<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="italic|bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_value"
        android:textSize="52sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_value" />

    <TextView
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_value"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value" />

    <TextView
        android:id="@+id/label_contribuition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribuition_per_month"
        app:layout_constraintTop_toBottomOf="@id/income"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@id/edt_contribuition"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_contribuition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="@id/label_contribuition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_contribuition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_bg"
            android:hint="@string/input_contribuiton_per_month"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_month"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_contribuition"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@id/edt_month"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="@id/label_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_bg"
            android:hint="@string/input_total_month"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_month"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@id/edt_interest"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="@id/label_interest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_bg"
            android:hint="@string/input_interest"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_calc"
        android:background="@drawable/button_border"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_calc"
        android:textColor="@color/background"
        android:background="@drawable/button_border_green"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>